add music to game

--- a/team2-a4-project/team2-a4-project.csproj
+++ b/team2-a4-project/team2-a4-project.csproj
@@ -63,6 +63,9 @@
     <None Update="Assets\Siamese_Fighting_Fish.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\StockTune-Angler%27s Anthem_1732650117.mp3">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\Sunfish.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
